@@ -1,3 +1,13 @@
+2021-05-06  Aakash Jain  <aakash_jain@apple.com>
+
+        EWS bubbles should show current status after pressing 'Retry failed builds' button
+        https://bugs.webkit.org/show_bug.cgi?id=225411
+
+        Reviewed by Jonathan Bedard.
+
+        * CISupport/ews-app/ews/views/statusbubble.py:
+        (StatusBubble._build_bubble):
+
 2021-05-06  Jonathan Bedard  <jbedard@apple.com>
 
         [webkitcorepy] Add API to efficiently create a sequence of commits
